supplemental: page fault handling 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -672,6 +672,122 @@ void spt_destroy(struct hash *spt) {
 }
 ```
 
+- Page Fault Handler and Load on demand
+
+page fault handler는 구현된 supplemental page table을 참고하여 page fault를 처리한다.
+page fault 주소가 supplemental page table에 등록되어 있는지 확인하고, 등록되어 있다면 해당 page를 physical memory에 load한다.
+
+```c
+static void page_fault(struct intr_frame *f) {
+  bool not_present; /* True: not-present page, false: writing r/o page. */
+  bool write;       /* True: access was write, false: access was read. */
+  bool user;        /* True: access by user, false: access by kernel. */
+  void *fault_addr; /* Fault address. */
+  
+  asm("movl %%cr2, %0"
+      : "=r"(fault_addr));
+  
+  intr_enable();
+  
+  page_fault_cnt++;
+  
+  not_present = (f->error_code & PF_P) == 0;
+  write = (f->error_code & PF_W) != 0;
+  user = (f->error_code & PF_U) != 0;
+  
+  if (fault_addr < PHYS_BASE && !user) {
+    f->eip = (void (*)(void))(f->eax);
+    f->eax = 0xffffffff;
+    return;
+  }
+  else if (user) {
+    if (spt_has_entry(&thread_current()->spt, fault_addr)) {
+      struct spt_entry *spte = spt_get_entry(&thread_current()->spt, fault_addr);
+      if (load_page(spte)) {
+        pf_restart(f);
+        return;
+      }
+    }
+    thread_current()->pcb->exit_code = -1;
+    thread_exit();
+  }
+  
+  ...
+  kill(f);
+}
+
+```
+
+spte에 해당하는 page를 load하기 위해 `load_page()`를 사용한다.
+load_page()가 성공한다면 pf_restart()를 호출하여 intr_frame을 수정하여, page fault를 발생시킨 명령어를 재실행하도록 한다.
+
+load_page()는 인자로 받는 spte의 성격에 따라 다른 방법으로 load on demand를 수행한다.
+swap partition에 저장되어 있는 경우, swap partition에서 page를 읽어와 physical memory에 load한다.
+file에 저장되어 있는 경우, file에서 page를 읽어와 physical memory에 load한다.
+
+```c
+bool load_page(struct spt_entry *spte) {
+  if (spte->is_file) {
+    return load_page_file(spte);
+  }
+  else {
+    return load_page_swap(spte);
+  }
+} 
+
+bool load_page_file(struct spt_entry *spte) {
+    ASSERT(spte != NULL)
+    ASSERT(spte->is_file)
+    ASSERT(spte->file != NULL)
+    ASSERT(spte->read_bytes + spte->zero_bytes == PGSIZE)
+    
+    /* Get a page of memory. */
+    void *kpage = frame_alloc(PAL_USER, spte->vaddr);
+    if (kpage == NULL)
+        return false;
+    
+    /* Load this page. */
+    if (file_read_at(spte->file, kpage, spte->read_bytes, spte->ofs) != (int) spte->read_bytes) {
+        frame_free(kpage);
+        return false;
+    }
+    memset(kpage + spte->read_bytes, 0, spte->zero_bytes);
+    
+    /* Add the page to the process's address space. */
+    if (!install_page(spte->vaddr, kpage, spte->writable)) {
+        frame_free(kpage);
+        return false;
+    }
+    
+    /* Set the page as loaded */
+    spte->is_loaded = true;
+    return true;
+}
+
+bool load_page_swap(struct spt_entry *spte) {
+    ASSERT(spte != NULL)
+    ASSERT(spte->swap_index != 0)
+    
+    /* Get a page of memory. */
+    void *kpage = frame_alloc(PAL_USER, spte->vaddr);
+    if (kpage == NULL)
+        return false;
+    
+    /* Load this page. */
+    vm_swap_in(spte->swap_index, kpage);
+    
+    /* Add the page to the process's address space. */
+    if (!install_page(spte->vaddr, kpage, spte->writable)) {
+        frame_free(kpage);
+        return false;
+    }
+    
+    /* Set the page as loaded */
+    spte->is_loaded = true;
+    return true;
+}
+```
+
 ## 4. Stack Growth
 
 ### Current Implementation
