supplemental: spt_add_entry_swap() 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -611,6 +611,25 @@ struct spt_entry *spt_add_entry_file(struct hash *spt, void *vaddr, struct file 
   return old;
 }
 
+struct spt_entry *spt_add_entry_swap(struct hash *spt, void *vaddr) {
+  ASSERT(spt != NULL)
+  struct spt_entry *old;
+  struct spt_entry *spte = malloc(sizeof(struct spt_entry));
+  spte->vaddr = pg_round_down(vaddr);
+  spte->is_loaded = false;
+  spte->is_file = false;
+  spte->writable = true;
+  spte->file = NULL;
+  spte->ofs = 0;
+  spte->read_bytes = 0;
+  spte->zero_bytes = 0;
+  spte->swap_index = swap_alloc();
+  old = spt_add_entry(spt, spte);
+  if (old != NULL)
+      free(spte);
+  return old;
+}
+
 struct spt_entry *spt_add_entry_stack(struct hash *spt, void *vaddr) {
   ASSERT(spt != NULL)
   struct spt_entry *old;
