supplemental: evict에 적용

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -214,7 +214,14 @@ void frame_evict(void) {
     target = hash_entry(hash_cur(&i), struct frame, elem);
   }
   
-  /* Append to Supplemental Page Table */
+  if (spt_has_entry(target->thread->spt, target->upage) {
+    struct spt_entry *spte = spt_get_entry(target->thread->spt, target->upage);
+    spte->is_loaded = false;
+    /* if dirty, swap out and update spte fields */
+  } else {
+    /* if dirty, swap out and add to spt */
+    /* else, just free */
+  }
   
   hash_delete(&frame_table, &target->elem);
   pagedir_clear_page(target->thread->pagedir, target->upage);
@@ -231,7 +238,7 @@ target을 제외한 나머지에 대해서는 accessed bit를 false로 초기화
 
 evict된 frame을 할당받았던 upage에 접근하려고 하면, 더 이상 연결된 physical memory가 없으므로 page fault가 발생한다.
 page fault 발생 시 page fault handler가 supplemental page table을 통해 fault가 발생한 upage를 physical memory로 다시 load한다.
-따라서 evict 하기 전에 target 소유자의 supplemental page table에 target frame의 upage를 등록해야 한다.
+따라서 evict 하기 전에 target 소유자의 supplemental page table에 target의 정보를 업데이트 해줘야 한다.
 supplemental page table과 그 등록 방법은 3. Supplemental Page Table에서 자세히 설명한다.
 
 이후, target에 대한 eviction을 진행한다.
