file mmap: revision

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -949,12 +949,13 @@ stack growth가 성공적으로 이루어진 경우에는 `true`를 반환하고
 
 ### Current Implementation
 
-현재는 파일을 메모리에 맵핑하는 기능이 구현되어 있지 않다.
+현재는 파일을 메모리에 mapping하는 기능이 구현되어 있지 않다.
 
 #### Limitations
-파일을 메모리에 맵핑하는 기능이 없기 때문에, 파일을 읽으려면 read()를 통해 파일을 읽어야 한다. 이러한 방식을 통해
-프로그램이 파일을 읽는 것은 비효율적이다. 예를 들자면, 여러개의 프로세스가 데이터에 대해서 `read-only` 로 접근을 해야할 때, 
-메모리에 파일을 연결해 놓는 다면 메모리를 아낄 수 있다. 따라서, 파일을 메모리에 mapping 하여 메모리 접근을 통해 파일의 데이터를 읽어오는 것을
+
+파일을 메모리에 mapping하는 기능이 없기 때문에, 파일을 읽으려면 `read()`를 통해 파일을 읽어야 한다. 이러한 방식을 통해
+프로그램이 파일을 읽는 것은 비효율적이다. 예를 들자면, 여러 개의 프로세스가 데이터에 대해서 `read-only` 로 접근을 해야할 때,
+메모리에 파일을 연결해 놓는다면 메모리를 아낄 수 있다. 따라서, 파일을 메모리에 mapping 하여 메모리 접근을 통해 파일의 데이터를 읽어오는 것을
 지원해야한다. 
 
 ### Solution
@@ -972,10 +973,11 @@ struct mmap_entry {
   size_t size;
 };
 ```
-- `id`: mmapid_t 타입의 mmap id 로써, mmap entry 를 구분 / 탐색하기 위해 사용한다. 
+
+- `id`: `mmapid_t` 타입의 mmap id 로써, mmap entry 를 구분 / 탐색하기 위해 사용한다.
 - `file`: mmap 을 요청한 파일의 file 구조체를 가리킨다. (이때 실행중 영향을 안 받기 위해 file을 reopen 한다.)
-- `elem`: mmap_entry 를 list 로 관리하기 위한 list_elem 이다.
-- `addr`: 파일을 맵핑할 user virtual address 를 가르킨다
+- `elem`: `mmap_entry` 를 list로 관리하기 위한 `list_elem` 이다.
+- `addr`: 파일을 맵핑할 user virtual address를 가르킨다.
 - `size`: 파일의 크기
 
 ```c
@@ -985,7 +987,8 @@ struct thread {
 //    ...
 };
 ```
-스레드 구조체 내부에 mmap_entry 를 관리하기 위한 list 를 추가한다.
+
+스레드 구조체 내부에 `mmap_entry`를 관리하기 위한 `list`를 추가한다.
 
 #### Algorithms and Implementation
 
@@ -994,7 +997,7 @@ struct thread {
 mmapid_t sys_mmap(void *addr, int fd){
   // 1. reopen file
   // 2. check all page to be mapped is valid (check from addr to addr + file_size)
-  // 3. map each page to file system
+  // 3. map each page to file system -> add file mapped page to supplemental page table
   // 4. init mmap_entry and add mmap_entry to mmap_list
 }
 ```
@@ -1003,7 +1006,7 @@ mmapid_t sys_mmap(void *addr, int fd){
 ```c
 void sys_munmap(mmapid_t mapping){
   // 1. find mmap_entry with mapping id
-  // 2. unmap each page
+  // 2. unmap each page -> remove the page from supplemental page table
   // 3. remove mmap_entry from mmap_list
   // 4. free other resources (close file, free mmap_entry)
 }
