supplemental: spt_delete_entry() 수정

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -674,11 +674,19 @@ struct spt_entry *spt_delete_entry(struct hash *spt, struct spt_entry *spte) {
   ASSERT(spt != NULL)
   ASSERT(spte != NULL)
   struct hash_elem *e = hash_delete(spt, &spte->elem);
-  return e != NULL ? hash_entry(e, struct spt_entry, elem) : NULL;
+  if (e) {
+    struct spt_entry* ret = hash_entry(e, struct spt_entry, elem);
+    // if ret is loaded, need to free frame
+    return ret;
+  }
+  else {
+    return NULL;
+  }
 }
 ```
 
 `spt`에서 `spte`가 삭제가 된다면 `spte`을 반환하고, 그렇지 않다면 `NULL`을 반환한다.
+`spt`에서 삭제되는 `spte`가 load되어 있는 경우, 연결된 physical memory를 해제해주어야 한다.
 반환한 `spte`를 `free()`하여 해제해주도록 한다.
 
 - Destroy supplemental page table
