swap table: swap_index 반영

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -491,7 +491,7 @@ struct spt_entry {
   uint32_t read_bytes;
   uint32_t zero_bytes;
   /* for swap */
-  uint32_t swap_index;
+  swap_index_t swap_index;
   struct hash_elem elem;
 };
 ```
@@ -506,7 +506,7 @@ struct spt_entry {
 6. `ofs`: file에서 page를 읽어와야 하는 경우, file에서 page의 시작 위치를 나타내기 위해 필요하다.
 7. `read_bytes`: file에서 page를 읽어와야 하는 경우, file에서 읽어와야 하는 byte 수를 나타내기 위해 필요하다.
 8. `zero_bytes`: file에서 page를 읽어와야 하는 경우, file에서 읽어온 후 남은 byte 수를 나타내기 위해 필요하다.
-9. `swap_index`: page가 swap partition에 저장되어 있는 경우, swap partition에서 page의 시작 위치를 나타내기 위해 필요하다.
+9. `swap_index`: page가 swap out된 경우. "6. Swap Table" 참고.
 10. `elem`: hash table인 supplemental page table에 추가하기 위해 필요하다.
 
 supplemental page table은 프로세스마다 가지고 있기 때문에 page 소유자를 따로 저장할 필요가 없다.
@@ -617,7 +617,7 @@ struct spt_entry *spt_add_entry_file(struct hash *spt, void *vaddr, struct file 
   return old;
 }
 
-struct spt_entry *spt_add_entry_swap(struct hash *spt, void *vaddr) {
+struct spt_entry *spt_add_entry_swap(struct hash *spt, void *vaddr, swap_index_t swap_index) {
   ASSERT(spt != NULL)
   struct spt_entry *old;
   struct spt_entry *spte = malloc(sizeof(struct spt_entry));
@@ -629,7 +629,7 @@ struct spt_entry *spt_add_entry_swap(struct hash *spt, void *vaddr) {
   spte->ofs = 0;
   spte->read_bytes = 0;
   spte->zero_bytes = 0;
-  spte->swap_index = swap_alloc();
+  spte->swap_index = swap_index;
   old = spt_add_entry(spt, spte);
   if (old != NULL)
       free(spte);
@@ -1061,11 +1061,10 @@ static struct bitmap *swap_table;
 static struct block *swap_block;
 ```
 
-마지막으로 페이지가 스왑에 의해 스왑 아웃 되었는지 확인하기 위해, `struct frame` 에 `swap_index` 를 추가했다.
+마지막으로 페이지가 스왑에 의해 스왑 아웃 되었는지 확인하기 위해, `struct spt_entry` 에 `swap_index` 를 추가했다.
 
 ```c
-// TODO: check this with chiheon's implementation
-struct spte{
+struct spt_entry{
     ...
     swap_index_t swap_index;
     ...
