termination: spt 해제 부분 수정

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -1177,29 +1177,27 @@ void process_exit(void){
   }
 ```
 
-그리고 Supplemental Page Table 을 비롯한 frame, swap 들은 `process_exit` 에서 해제해준다. 
+그리고 Supplemental Page Table 을 비롯한 frame, swap 들은 `process_exit` 에서 해제해준다.
+"3. Supplemetal page table"에서 언급한 Delete supplemental page table entry와 Destroy supplemental page table을 활용하여
+남아있는 supplemental page table entry들을 해제하고, supplemental page table을 해제할 수 있다.
 ```c
-void process_exit(void){
-  // ...
-  supt_free(&cur->supt);
-  &cur->supt = NULL;
-  // ...
-}
-
-void supt_free(struct hash_table *supt){
-  hash_destroy(supt, supte_destroy_func);
-}
-
-void supte_destroy_func(struct hash_elem *e, void *aux UNUSED){
-  // TODO: Need to check with chiheon's implementation
-  struct supte *supte = hash_entry(e, struct supte, elem);
-  
-  if (supte->kpage != NULL) {
-    frame_free(supte->kpage);
-  } else if (supte->type == SWAP) {
-    vm_swap_free(supte->swap_index);
+struct spt_entry *spt_delete_entry(struct hash *spt, struct spt_entry *spte) {
+  ASSERT(spt != NULL)
+  ASSERT(spte != NULL)
+  struct hash_elem *e = hash_delete(spt, &spte->elem);
+  if (e) {
+    struct spt_entry* ret = hash_entry(e, struct spt_entry, elem);
+    // if ret is loaded, need to free frame
+    return ret;
   }
-  
-  free(supte);
+  else {
+    return NULL;
+  }
+}
+
+void spt_destroy(struct hash *spt) {
+  ASSERT(spt != NULL)
+  /* clean up spt entries using spt_delete_entry() */
+  hash_destroy(spt, spt_destroy_action);
 }
 ```
