swap solution 없어진 것들 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -968,7 +968,8 @@ stack growth가 성공적으로 이루어진 경우에는 `true`를 반환하고
 
 ### Solution
 
-Swapping 과 관련해서는 file-backed page 의 경우 원본 파일이 저장된 공간이 있으므로, 
+Swapping 과 관련해서는 file-backed page 의 경우 원본 파일이 저장된 공간이 있으므로, Swap 시에
+원본 파일에 변경된 내용을 다시 써준다. 자세한 구현은 아래에서 설명한다.
 
 #### Data Structure
 
@@ -1015,6 +1016,8 @@ mmapid_t sys_mmap(void *addr, int fd){
 void sys_munmap(mmapid_t mapping){
   // 1. find mmap_entry with mapping id
   // 2. unmap each page -> remove the page from supplemental page table
+  // 2-1. if page is in frame, check if upage or mapped frame is dirty, and write back
+  // 2-1. if page is in swap, temp frame 에 swap in 한 후, check if dirty, and write back 
   // 3. remove mmap_entry from mmap_list
   // 4. free other resources (close file, free mmap_entry)
 }
