frame table: evict spt관련 수정

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -220,7 +220,9 @@ void frame_evict(void) {
   if (spt_has_entry(target->thread->spt, target->upage) {
     struct spt_entry *spte = spt_get_entry(target->thread->spt, target->upage);
     spte->is_loaded = false;
-    /* if dirty, swap out and update spte fields */
+    /* if dirty, 
+         if file, write back to the file
+         if not file, swap out */
   } else {
     /* if dirty, swap out and add to spt */
     /* else, just free */
