--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -61,7 +61,8 @@ struct pool {
 `bitmap`은 `lib/kernel/bitmap.h`에 정의되어 있다.
 
 page를 할당받기 위해서는 `threads/palloc.h`에 정의된 `palloc_get_page()` 함수를 사용한다.
-`palloc_get_page()`는 내부적으로 `palloc_get_multiple()` 함수를 호출하는데, 이 함수가 `pool`에 직접 접근하여 free page를 할당받는다.
+`palloc_get_page()`는 내부적으로 `palloc_get_multiple()` 함수를 호출하는데, 이 함수가 `pool`에 직접 접근하여 free page를
+할당받는다.
 할당받는다는 것은 `used_map`에서 0인 비트를 찾아 1로 바꾸고, 해당 page의 주소를 반환하는 것을 의미한다.
 page의 주소는 `pool`의 시작 주소인 `base`에 page의 index * `PGSIZE`를 더한 값이다.
 
@@ -77,7 +78,8 @@ page replacement algorithm을 지원하기 위해서 더 많은 정보를 담는
 
 ### Solution
 
-특정 프로세스의 특정 `upage`(user virtual address)에 할당된 physical memory page에 대한 정보를 담기 위해 `frame` 구조체를 정의하여 사용한다.
+특정 프로세스의 특정 `upage`(user virtual address)에 할당된 physical memory page에 대한 정보를 담기 위해 `frame` 구조체를 정의하여
+사용한다.
 `frame`들을 관리하기 위한 `frame_table`을 hash table로 구현한다.
 
 #### Data Structure
@@ -240,7 +242,8 @@ void frame_evict(void) {
 찾을 수 없다면 `target`은 `hash_first()`를 통해 `frame_table`의 첫 번째 `frame`으로 설정한다.
 
 evict된 `frame`을 할당받았던 `upage`에 접근하려고 하면, 더 이상 연결된 physical memory가 없으므로 page fault가 발생한다.
-이때 page fault handler가 supplemental page table을 통해 fault가 발생한 `upage`를 physical memory로 다시 load 해야 한다.
+이때 page fault handler가 supplemental page table을 통해 fault가 발생한 `upage`를 physical memory로 다시 load 해야
+한다.
 따라서 evict 하기 전에 `target` 소유자의 supplemental page table에 `target`의 정보를 업데이트 해줘야 한다.
 supplemental page table과 관련된 내용은 "3. Supplemental Page Table"에서 자세히 설명한다.
 
@@ -418,10 +421,10 @@ static bool load_segment_lazy(struct file *file, off_t ofs, uint8_t *upage,
 ```
 
 `load_segment_lazy()`를 구현하여 `load()`에서 `load_segment()`를 호출하는 부분을 `load_segment_lazy()`로 변경한다.
-`load_segment_lazy()`는 `load_segment()`와 다르게, `palloc_get_page()`로 직접 physical memory에 page를 할당받지 않는다.
+`load_segment_lazy()`는 `load_segment()`와 다르게, `palloc_get_page()`로 직접 physical memory에 page를 할당받지
+않는다.
 또한, 파일 내용을 바로 읽어오지 않는다. 읽어와야 하는 파일 내용에 대한 정보를 계산만 하고, 이를 supplemental page table에 저장한다.
 supplemental page table과 관련된 함수와 그 함수에 관한 스펙은 아래에서 설명한다.
-
 
 ## 3. Supplemental Page Table
 
@@ -471,7 +474,8 @@ lazy loading 등이 구현이 된다면, 실제로 유효한 virtual address에 
 ### Solution
 
 page fault 발생 시에 page fault handler가 참고할 수 있도록 supplemental page table을 구현해야한다.
-또한 supplemental page table에 들어가는 supplemental page table entry는 page fault handler에게 필요한 정보를 포함하도록 정의해야한다.
+또한 supplemental page table에 들어가는 supplemental page table entry는 page fault handler에게 필요한 정보를 포함하도록
+정의해야한다.
 
 추가로, 프로세스가 사용하는 모든 page가 supplemental page table에 올라가도록 한다면, 프로세스 종료 시 해제해야하는 page를 모두 알 수 있다.
 
@@ -668,7 +672,8 @@ load가 되거나 swap partition에 저장되는 경우에는 `is_loaded`나 `sw
 
 - Delete supplemental page table entry
 
-supplemental page table에서 entry가 삭제되는 것은 `munmap()`이 불려서 memory mapping 된 file이 해제되는 경우와 프로세스가 종료되는 경우이다.
+supplemental page table에서 entry가 삭제되는 것은 `munmap()`이 불려서 memory mapping 된 file이 해제되는 경우와 프로세스가 종료되는
+경우이다.
 supplemental page table에서 entry를 삭제하기 위해 `spt_delete_entry()`를 사용한다.
 
 ```c
@@ -1030,12 +1035,14 @@ void sys_munmap(mmapid_t mapping){
 ### Current Implementation
 
 Swap slot 은 디스크의 swap partition 에 저장되는 연속된 공간을 의미한다. 현재 핀토스에는 swap 과 관련된
-기능들이 구현되어있지 않다. 따라서, free frame 이 존재하지 않을때 프레임을 확보하기 위한 기능인 swap 기능을 구현하기 위한 `swap.c`, `swap.h` 를 새로 추가해 구현한다. 
+기능들이 구현되어있지 않다. 따라서, free frame 이 존재하지 않을때 프레임을 확보하기 위한 기능인 swap 기능을 구현하기 위한 `swap.c`, `swap.h` 를 새로
+추가해 구현한다.
 디스크에 저장될 곳이 없는 익명 페이지의 경우는 swap 을 위해 `devices/block.c` 에서 제공하는 블럭 디바이스를
-사용해 구현한다. 
+사용해 구현한다.
 
 - `block_get_role(BLOCK_SWAP)` : swap block 을 가져온다.
-- `block_read(swap_block, swap_index, buffer)` : swap block 에서 swap_index 에 해당하는 블럭을 읽어 buffer 에 저장한다.
+- `block_read(swap_block, swap_index, buffer)` : swap block 에서 swap_index 에 해당하는 블럭을 읽어 buffer 에
+  저장한다.
 - `block_write(swap_block, swap_index, buffer)` : swap block 에서 swap_index 에 해당하는 블럭에 frame 을 저장한다.
 
 #### Limitations
@@ -1129,8 +1136,9 @@ void vm_swap_in(uint32_t swap_index, void * page) {
 }
 ```
 
-위 스왑 아웃과 스왑 인의 로직은 anonymous page 의 경우 페이지를 쓸 저장공간이 따로 없으므로, 블럭을 사용하는 로직이다. 
-만약에, File-backed page 일 경우, dirty bit 을 확인하여 dirty 하다면, 파일에 다시 써주는 방식으로 구현될 수 있다. 
+위 스왑 아웃과 스왑 인의 로직은 anonymous page 의 경우 페이지를 쓸 저장공간이 따로 없으므로, 블럭을 사용하는 로직이다.
+만약 evict되는 frame이 file-backed page이고 dirty bit가 setting 된 경우, `vm_swap_out()`으로 swap disk에 적는 것이 아닌
+backed file에 직접 write back하는 것으로 구현한다.
 
 - `vm_swap_free()`
 
@@ -1155,9 +1163,11 @@ void vm_swap_free(uint32_t swap_index) {
 #### Limitations
 
 ### Solution
-VM 기능상에서 해제해야할 항복들을 다음과 같다. 
+
+VM 기능상에서 해제해야할 항복들을 다음과 같다.
+
 - mmap 해준 entry 들의 파일과 메모리들
-- Supplemental Page Table 
+- Supplemental Page Table
 - Frame
 - Swap
 
@@ -1165,7 +1175,8 @@ VM 기능상에서 해제해야할 항복들을 다음과 같다.
 
 #### Algorithms and Implementation
 
-mmap 들은 종료시 다시 munmap 으로 해제해준다. 
+mmap 들은 종료시 다시 munmap 으로 해제해준다.
+
 ```c
 void process_exit(void){
   // ...
@@ -1179,8 +1190,10 @@ void process_exit(void){
 ```
 
 그리고 Supplemental Page Table 을 비롯한 frame, swap 들은 `process_exit()` 에서 해제해준다.
-"3. Supplemetal page table"에서 언급한 Delete supplemental page table entry와 Destroy supplemental page table을 활용하여
+"3. Supplemetal page table"에서 언급한 Delete supplemental page table entry와 Destroy supplemental page
+table을 활용하여
 남아있는 supplemental page table entry들을 해제하고, supplemental page table을 해제할 수 있다.
+
 ```c
 struct spt_entry *spt_delete_entry(struct hash *spt, struct spt_entry *spte) {
   ASSERT(spt != NULL)
