--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -1024,7 +1024,8 @@ void sys_munmap(mmapid_t mapping){
   // 1. find mmap_entry with mapping id
   // 2. unmap each page -> remove the page from supplemental page table
   // 2-1. if page is in frame, check if upage or mapped frame is dirty, and write back
-  // 2-1. if page is in swap, temp frame 에 swap in 한 후, check if dirty, and write back 
+  // 2-2. if page is not in frame, 이미 evict 시에 변경 내용은 파일에 적혀있을 것이다
+  // 2-3. if page is in frame and clean, just free frame and spt
   // 3. remove mmap_entry from mmap_list
   // 4. free other resources (close file, free mmap_entry)
 }
